# CS-REPLACEMENT-WEAR-PRICE-CALCULATOR

./: CMakeLists.txt  README.md  main.cpp
include/: IoTableDialog.h
src/: IoTableDialog.cpp
ui/: MainWindow.ui
